--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span>Facebook</span>
         </a>
         <a href="https://www.google.com/maps/place/RPK+SITI+HALIMAH/@-0.9766192,119.9149223,20.3z/data=!4m15!1m8!3m7!1s0x2d8bf13174aca26b:0x2d46314f2129a274!2sJono+Oge,+Kec.+Sigi+Biromaru,+Kabupaten+Sigi,+Sulawesi+Tengah!3b1!8m2!3d-0.9799599!4d119.9104436!16s%2Fg%2F1hm2rm006!3m5!1s0x2d8bf10059a34137:0x277b3525a6989c4f!8m2!3d-0.9764381!4d119.9148273!16s%2Fg%2F11ldx5c3_y?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoASAFQAw%3D%3D" class="link-button location">
-            <i class="fab fa-location"></i>
+            <i class="fas fa-map-marker-alt"></i>
             <span>Maps</span>
           </a>
       </section>
